# openstryker

./: CMakeLists.txt
cmp_unpacker/: CMakeLists.txt
cmp_unpacker/src/: main.cpp
ega_reader/: CMakeLists.txt
ega_reader/src/: main.cpp
level_reader/: CMakeLists.txt
level_reader/src/: main.cpp
level_viewer/: CMakeLists.txt
level_viewer/src/: main.cpp
libstryker/: CMakeLists.txt  files.txt
libstryker/include/libstryker/cmp/: file_table.hpp  file_table_entry.hpp  read_cmp_entry.hpp  read_file_table.hpp
libstryker/include/libstryker/ega/: read_byte_planar_bgri_stream.hpp  rgb_pixel.hpp  rgb_pixel_grid.hpp  rgb_pixel_map.hpp
libstryker/include/libstryker/level/: read.hpp  record.hpp  string.hpp  string_decl.hpp
libstryker/src/libstryker/cmp/: read_cmp_entry.cpp  read_file_table.cpp
libstryker/src/libstryker/ega/: read_byte_planar_bgri_stream.cpp
libstryker/src/libstryker/level/: read.cpp
util/: prettify_includes  update_cmake.sh
